# hidden-star

./: .gitignore  64.c  CMakeLists.txt  audio.c  audio.h  cit  combat.c  combat.h  comms.c  comms.h  economy.h  factions.c  factions.h  gui.c  gui.h  intro.c  intro.h  io.github.Cheeseness.HiddenStar.json  main.c  main.h  menu.c  menu.h  planet.c  planets.c  planets.h  readme.md  starmap.c  starmap.h  trade.c  trade.h  travel.c  travel.h  user_events.c  user_events.h
audio/: music.tsv  sfx.tsv
platform/linux/: hidden_star.sh
platform/mac/: hidden_star.command
standalone/: 64.c  CMakeLists.txt  cit-hyper  hyper.c  planet.c  script_gen.c  spin.html  starmap.c  tunnel.c
text/: comms_npc_defend.tsv  comms_npc_farewell.tsv  comms_npc_greetings.csv  comms_npc_greetings.tsv  comms_npc_info.tsv  comms_npc_trade.tsv  star_name_chunks.txt  translation_phonemes.csv
util/: CMakeLists.txt  spin.html  vector.c  vector.h
